fixed contrast issues

--- a/resources/css/globals.css
+++ b/resources/css/globals.css
@@ -12,7 +12,7 @@
     --color-neutral-800:#333333;
     --color-dark:       #1F1F1F;
     --color-background:#FFFFFF;
-    --color-aqua: #BCFEFD;
+    --color-aqua: #7BE3E2;
 
     /* font */
     --font-sans:        'Instrument Sans', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -468,7 +468,7 @@
     /* and for buttons */
     .btn-aqua {
         background-color: var(--color-aqua);
-        color: white;
+        color: black;
     }
 
     /* if you need hover/dark variants, you can add them too */
